crates/alder-can/src/snapshots/alder_can__module__tests__binop_multi_precedence.snap
---
source: crates/alder-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nimport Basics exposing (..)\n\nx a b c = a + b * c\n"
---
Module {
    name: ModuleName {
        package: None,
        name: "Main",
    },
    exports: Everything(
        Region {
            start: Position {
                line: 1,
                column: 22,
            },
            end: Position {
                line: 1,
                column: 26,
            },
        },
    ),
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 6,
                column: 1,
            },
        },
    ),
    decls: Declare {
        definition: Def {
            name: Located {
                region: Region {
                    start: Position {
                        line: 5,
                        column: 1,
                    },
                    end: Position {
                        line: 5,
                        column: 2,
                    },
                },
                value: "x",
            },
            args: [
                Located {
                    region: Region {
                        start: Position {
                            line: 5,
                            column: 3,
                        },
                        end: Position {
                            line: 5,
                            column: 4,
                        },
                    },
                    value: Var(
                        "a",
                    ),
                },
                Located {
                    region: Region {
                        start: Position {
                            line: 5,
                            column: 5,
                        },
                        end: Position {
                            line: 5,
                            column: 6,
                        },
                    },
                    value: Var(
                        "b",
                    ),
                },
                Located {
                    region: Region {
                        start: Position {
                            line: 5,
                            column: 7,
                        },
                        end: Position {
                            line: 5,
                            column: 8,
                        },
                    },
                    value: Var(
                        "c",
                    ),
                },
            ],
            body: Located {
                region: Region {
                    start: Position {
                        line: 5,
                        column: 11,
                    },
                    end: Position {
                        line: 5,
                        column: 20,
                    },
                },
                value: Binop {
                    symbol: "+",
                    reference: QualifiedName {
                        home: ModuleName {
                            package: None,
                            name: "Basics",
                        },
                        name: "add",
                    },
                    annotation: Annotation {
                        free_vars: [
                            "a",
                        ],
                        typ: Located {
                            region: Region {
                                start: Position {
                                    line: 0,
                                    column: 0,
                                },
                                end: Position {
                                    line: 0,
                                    column: 0,
                                },
                            },
                            value: Var(
                                "a",
                            ),
                        },
                    },
                    left: Located {
                        region: Region {
                            start: Position {
                                line: 5,
                                column: 11,
                            },
                            end: Position {
                                line: 5,
                                column: 12,
                            },
                        },
                        value: VarLocal(
                            "a",
                        ),
                    },
                    right: Located {
                        region: Region {
                            start: Position {
                                line: 5,
                                column: 15,
                            },
                            end: Position {
                                line: 5,
                                column: 20,
                            },
                        },
                        value: Binop {
                            symbol: "*",
                            reference: QualifiedName {
                                home: ModuleName {
                                    package: None,
                                    name: "Basics",
                                },
                                name: "mul",
                            },
                            annotation: Annotation {
                                free_vars: [
                                    "a",
                                ],
                                typ: Located {
                                    region: Region {
                                        start: Position {
                                            line: 0,
                                            column: 0,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 0,
                                        },
                                    },
                                    value: Var(
                                        "a",
                                    ),
                                },
                            },
                            left: Located {
                                region: Region {
                                    start: Position {
                                        line: 5,
                                        column: 15,
                                    },
                                    end: Position {
                                        line: 5,
                                        column: 16,
                                    },
                                },
                                value: VarLocal(
                                    "b",
                                ),
                            },
                            right: Located {
                                region: Region {
                                    start: Position {
                                        line: 5,
                                        column: 19,
                                    },
                                    end: Position {
                                        line: 5,
                                        column: 20,
                                    },
                                },
                                value: VarLocal(
                                    "c",
                                ),
                            },
                        },
                    },
                },
            },
        },
        next: Empty,
    },
    unions: [],
    aliases: [],
    binops: [],
}
